@@ -5,6 +5,7 @@ NEXT
        proper SQL syntax.
        Inside regular expressions, interpolate hash and hashref
        elements.
+       Implemented except {}.
 
 0.17  Tue Feb 20 10:26:21 2007
        Added autogrouping when aggregates were seen in the return statement.
